Fix alignment on hero aside <h2 />

--- a/_scss/index.scss
+++ b/_scss/index.scss
@@ -55,6 +55,7 @@ $include-html-classes: false;
 	h2 {
 		font-size: 24pt;
 		margin-bottom: 0;
+		text-align: left;
 	}
 	
 	h3 {
